src/test/ui/rfc-2627-raw-dylib/multiple-definitions.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/multiple-definitions.rs:4:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: multiple definitions of external function `f` from library `foo.dll` have different calling conventions
  --> $DIR/multiple-definitions.rs:8:5
   |
LL |     fn f(x: i32);
   |     ^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

